# dumb_contract

./: Cargo.toml  LICENSE  README.md
examples/: run_contract.rs
src/: contract.rs  error.rs  lib.rs  test.rs
