[package]
name = "dumb_contract"
version = "0.1.0"
edition = "2021"
authors = ["Zachary Kleckner"]
description = "A Rust crate for writing, testing, and deploying smart contracts on various blockchain platforms."
license = "MIT"
repository = "https://github.com/goldenhippo58/smart_contract_crate"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web3 = "0.19.0"                                    # For Ethereum integration
solana-sdk = "2.0.8"                               # For Solana integration
tokio = { version = "1", features = ["full"] }
solana-client = "2.0.8"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lib] # Ensure this section is present
crate-type = ["lib"]
